@@ -5,6 +5,9 @@ ChangeLog
 
 SVN TRUNK
 
+- First attempt to allow a headless stand-alone JACK client
+  application run mode, without a GUI, with option given as
+  command line argument (--no-gui). (EXPERIMENTAL)
 - A man page has beed added (re. stand-alone JACK client).
 - Reverse sample option and parameter knob added. (EXPERIMENTAL)
 - Allow the build system to include an user specified LDFLAGS.
